# AkesoSOAR

./: .env.example  .gitignore  REQUIREMENTS.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.local.json
akeso_soar/: __init__.py  app.py  config.py  db.py  dependencies.py  logging.py
akeso_soar/api/: alerts.py  audit.py  auth.py  connectors.py  coverage.py  executions.py  human_tasks.py  metrics.py  playbooks.py  rbac.py  search.py  use_cases.py  users.py  websocket.py
akeso_soar/connectors/: __init__.py  akeso_c2.py  akeso_dlp.py  akeso_edr.py  akeso_fw.py  akeso_ndr.py  akeso_siem.py  base.py  credentials.py  generic_http.py  registry.py
akeso_soar/engine/: condition_evaluator.py  executor.py  parser.py  retry_handler.py  rollback_handler.py  schema.py  use_case_matcher.py  variable_resolver.py
akeso_soar/models/: __init__.py  alert.py  audit.py  base.py  connector.py  enums.py  execution.py  human_task.py  playbook.py  use_case.py  user.py
akeso_soar/services/: alert_ingestion.py  alert_poller.py  audit_service.py  auth.py  data_source_health.py  human_task_service.py  metrics_service.py  mitre_coverage.py  playbook_service.py  playbook_trigger.py  review_scheduler.py  search_service.py  use_case_diff.py  use_case_lifecycle.py  use_case_playbook_link.py  use_case_service.py  ws_manager.py
alembic/: env.py
alembic/versions/: b9cc93673767_initial_schema.py  dc8490cca28f_seed_data.py  (+1 more)
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  (+1 more)
schemas/: playbook.schema.json
(+36 files in other folders)
