[project]
name = "akeso-soar"
version = "0.1.0"
description = "AkesoSOAR — Security Orchestration, Automation, and Response Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.12",

    # Playbook engine
    "pyyaml>=6.0.2",
    "jsonschema>=4.23.0",
    "jinja2>=3.1.4",

    # Connectors
    "httpx>=0.28.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "cryptography>=44.0.0",

    # Logging & utilities
    "structlog>=24.4.0",

    # CORS & middleware
    "starlette>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["akeso_soar*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
